Fix datatables footer text wrapping

--- a/data/interfaces/default/css/plexpy.css
+++ b/data/interfaces/default/css/plexpy.css
@@ -2491,6 +2491,9 @@ a .home-platforms-list-cover-face:hover
 .dataTables_paginate li {
     margin: 0;
 }
+div.dataTables_info {
+    white-space: normal !important;
+}
 .tooltip.top .tooltip-arrow {
     border-top-color: #fff;
 }
